# secmon

./: .gitignore  Cargo.toml  DYNAMIC_DEVICES.md  README.md  TESTING.md  config.toml  enhanced-config.toml  example-configuration.nix  flake.nix  nixos-integration.md  push-to-cachix.sh  quick-test.sh  result  secmon.service  simple-config.toml  simple-test-config.toml  simulate-devices.sh  test-config.toml  test-local.sh  test-signal-handling.toml  user-config.toml
.github/: SETUP.md
.github/workflows/: rust.yml
src/: config.rs  device_discovery.rs  error.rs  main.rs  network_ids.rs  network_monitor.rs  usb_monitor.rs
