[package]
name = "secmon-daemon"
version = "0.1.4"
edition = "2021"
authors = ["s0ul"]
description = "A security monitoring daemon for Linux filesystem events"

[[bin]]
name = "secmon-daemon"
path = "src/main.rs"

[[bin]]
name = "secmon-client"
path = "src/bin/client.rs"

[[bin]]
name = "secmon-msg"
path = "src/bin/msg.rs"

[dependencies]
# Filesystem monitoring
inotify = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Unix domain sockets
tokio-stream = { version = "0.1", features = ["net"] }

# Network monitoring
procfs = "0.16"

# USB device monitoring
libudev = "0.3"

# Glob pattern matching
glob = "0.3"

# System calls for daemon mode
libc = "0.2"

# Notifications
notify-rust = "4.0"

# Command execution
tokio-process = "0.2"

# Lazy static initialization
lazy_static = "1.4"

# Terminal UI
crossterm = "0.27"
ratatui = "0.26"

# CSV export
csv = "1.3"

# Additional time handling
chrono-humanize = "0.2"

# Regex for filtering
regex = "1.10"

# TTY detection for stdin handling
atty = "0.2"

# Network monitoring and packet capture
socket2 = "0.5"
nix = "0.29"

# IP address parsing
ipnetwork = "0.20"
